re-applied Java 17+ way